# psx-equity-analytics

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  Makefile  P3-README.md  README.md  pyproject.toml  rationale.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  security.yml
airflow/dags/: psx_pipeline_dag.py
app/: api.py
dbt/: dbt_project.yml
dbt/models/: sources.yml
dbt/profiles/: profiles.yml.example
docs/adr/: ADR-001-duckdb-over-postgres.md  ADR-002-airflow-only-scheduling.md
governance/: P3-ADVERSARIAL-AUDIT-TEMPLATE.md  P3-CLOSURE-DECLARATION.md  P3-HARDENING-LOG.md  P3-RUNBOOK.md  closure-declaration.md  hardening-log.md
grafana/dashboards/: psx_analytics_pipeline.json
infra/docker/: Dockerfile  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
prometheus/: prometheus.yml
prometheus/exporters/: duckdb_metrics.py
scripts/: backup.sh  duckdb_manager.py  psx_ingest.py  restore.sh  rotate_secrets.sh  settlement_enrichment.py
security/: SECURITY.md
serving/: psx_analytics_api.py
tests/: test_p3_hardening.py  test_psx_analytics_regression.py
tests/chaos/: test_duckdb_lock_recovery.py
tests/contracts/: test_fact_daily_analytics_schema.py
tests/dq/: test_dq_thresholds.py
tests/fixtures/: conftest.py  seed_manifest.json  seed_psx_eod.parquet
tests/integration/: test_airflow_dag_import.py  (+1 more)
(+10 files in other folders)
